--- a/intonations/libera-me/index.html
+++ b/intonations/libera-me/index.html
@@ -7,7 +7,7 @@
          
   <link rel="stylesheet" href="/scores/assets/css/score.css">
   <link rel="stylesheet" href="../styles.css">
-  <link rel="stylesheet" href="/scores/assets/modules/line-cloud/styles.css">
+  <link rel="stylesheet" href="/scores/assets/modules/line-cloud/styles.css"><link rel="stylesheet" href="/scores/assets/modules/save-svg/styles.css">
   <link rel="stylesheet" href="styles.css">
  
     </head>
@@ -84,7 +84,9 @@
 	<div id="score-options-modal" class="modal-content">
             <span id="score-options-close" class="modal-close">×</span>
             <h2>Options</h2>
-            <div>
+            <div><div>
+  <a id="save-svg" href="" download="">download SVG</a>
+</div>
 <div>
   <h4>WebSocket connection</h4>
   <p>Not available</p>
@@ -93,7 +95,7 @@
     </div>
         <script src="/scores/assets/js/lib/d3.v4.min.js" charset="utf-8"></script>
     <script src="/scores/assets/js/vectorscores.js" charset="utf-8"></script>
-    <script src="/scores/assets/modules/line-cloud/index.js" charset="utf-8"></script>
+    <script src="/scores/assets/modules/line-cloud/index.js" charset="utf-8"></script><script src="/scores/assets/modules/save-svg/index.js" charset="utf-8"></script>
         <script src="index.js" charset="utf-8"></script>
     </body>
     </html>
